<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SimulatorView">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SimulatorView">

        <EditText
            android:id="@+id/serial_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:hint="@string/serial_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/serial_label"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="26" />

        <TextView
            android:id="@+id/serial_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/serial_label"
            app:layout_constraintBottom_toBottomOf="@+id/serial_field"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/serial_field" />

        <EditText
                android:id="@+id/uin_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:layout_marginEnd="@dimen/small_margin"
                android:hint="@string/uin_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/uin_label"
                app:layout_constraintTop_toBottomOf="@+id/serial_field"
                tools:targetApi="26" />

        <TextView
                android:id="@+id/uin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:text="@string/uin_label"
                app:layout_constraintBottom_toBottomOf="@+id/uin_field"
                app:layout_constraintEnd_toEndOf="@+id/serial_label"
                app:layout_constraintTop_toTopOf="@+id/uin_field" />

        <Spinner
            android:id="@+id/role_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:entries="@array/roles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/role_label"
            app:layout_constraintTop_toBottomOf="@+id/uin_field" />

        <TextView
            android:id="@+id/role_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_label"
            app:layout_constraintBottom_toBottomOf="@+id/role_spinner"
            app:layout_constraintEnd_toEndOf="@+id/serial_label"
            app:layout_constraintTop_toTopOf="@+id/role_spinner" />
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
